--- a/demo/vue.html
+++ b/demo/vue.html
@@ -1,94 +1,119 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vue 购物车</title>
+    <title>Vue购物车</title>
     <link href="https://cdn.bootcss.com/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<style>
-    .container{
-        width: 40%;
-        margin: 100px auto;
-    }
-    .removed{
-        color: gray;
-    }
-    .removed label{
-        text-decoration: line-through;
-    }
-    ul{
-        border: 1px solid black;
-        margin-top: 30px;
-    }
-    ul li {
-        list-style: none;
-    }
+    <style>
+        .container {
+            width: 40%;
+            margin: 100px auto;
+        }
 
-</style>
+        .removed {
+            color: gray;
+        }
+
+        .removed label {
+            text-decoration: line-through;
+        }
+
+        ul {
+            border: 1px solid black;
+            margin-top: 30px;
+        }
+
+        ul li {
+            list-style: none;
+        }
+    </style>
+</head>
+
 <body>
-    <div class="container" id ="app">
-        <!--都是动态  而不是死数据-->
-        <h2>{{title}}</h2>
-        <div class="input-group">
-            <input v-model = "newItem"class="form-control" type="text" placeholder="输入你想购买的物品">
-            <span class="input-group-btn">
-                <button v-on:click='addItem' type="button" class="btn btn-default">添加到购物车</button>
-            </span>
-        </div>
-        <ul>
-        <!--遍历一下   v-for  是便利            v-bind   默认的是点击事件  点击查看 是不是checked  true -->
-            <li v-for="item in items" v-bind:class="{'removed'item.checked}">
-                <div class="checkbox">
-                    <label for="">
-                        <input type="checkbox" v-model="itme.checked">{{item.text}}
-                    </label>
-                </div>
-            </li>
-        </ul>
+    <div class="container" id="app">
+        <h2>{{ title }}</h2>
+        <add-item-component></add-item-component>
+        <items-component></items-component>
+        <!-- 修改标题 -->
         <div class="footer">
             <hr>
             <span>改变你的标题</span>
-            <!--  v-model 是双向遍历   v-on 是输入 -->
-            <input v-model="title">
+            <change-title-component></change-title-component>
         </div>
     </div>
 </body>
-<script src="https://cdn.bootcss.com/vue/2.6.11/vue.min.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script>
     var data = {
-        items:[
-            {text:'苹果',checked=true},
-            {text:'电脑',checked=true},
+        items: [
+            {text:'苹果',checked:true},
+            {text:'电脑',checked:true}
         ],
-        title:"我的购物车清单",
-        //定义一个心得对象
-        newItem:'11111'
+        title: "我的购物车",
+        newItem:''
     }
-    // 注意括号
-    new Vue({
-        el:'#app',
-        data:data,
-        //所有的js  需要在 methods  里面写
+    // 创建列表组件
+    var ItemsComponents = Vue.extend({
+        data:function(){
+            return data;
+        },
+        template:'<ul>'+
+        '           <li v-for="item in items">'+
+        '             <div class="checkbox">'+
+        '               <label for="">'+
+        '                 <input type="checkbox" v-model="item.checked">{{ item.text }}'+
+        '               </label>'+
+        '             </div>'+
+        '           </li>'+
+        '         </ul>'
+    });
+
+    // 创建改变标题组件
+    var ChangeTitleComponent = Vue.extend({
+        data:function(){
+            return data;
+        },
+        template:'<input v-model="title">'
+    });
+
+    // 创建添加到购物车组件
+    var AddItemComponent = Vue.extend({
+        data:function(){
+            return data;
+        },
         methods:{
             addItem:function(){
                 var text;
-                //去掉  无效的内容 
-                text = this.newItem.trim()
+                text = this.newItem.trim();
                 if(text){
                     this.items.push({
                         text:text,
                         checked:false
                     })
                 };
-                this.newItem=''
-            },
-            showItem:function(){
-                console.log('ddddddd')
+                this.newItem = ''
             }
-        }
-    })
+        },
+        template:
+            '<div class="input-group">'+
+            '<input v-model="newItem" class="form-control" type="text" placeholder="输入你想购买的物品">'+
+            '<span class="input-group-btn">'+
+                '<button v-on:click="addItem" type="button" class="btn btn-default">添加到购物车</button>'+
+            '</span>'+
+            '</div>'
+    });
 
+    // 注册组件
+    Vue.component('items-component',ItemsComponents);
+    Vue.component('change-title-component',ChangeTitleComponent);
+    Vue.component('add-item-component',AddItemComponent);
+
+    new Vue({
+        el: '#app',
+        data: data
+    })
 </script>
+
 </html>
